fix SaveProjectAsTemplateTest (part 2)
GitOrigin-RevId: 84403567030ef83e86736d192f6a99795cfab628